# pmsynapse

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COZODB_INTEGRATION.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_SETUP_CHECKLIST.md  SEED_PLAN.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.claude/agents/: thoughts-analyzer.md  thoughts-locator.md
.github/release-notes/: TEMPLATE.md  v0.1.0.md  v0.2.0.md  v0.2.1.md
.github/workflows/: ci.yml  release-cli.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/desktop/src/components/session-viewer/: SessionViewer.tsx  session-template.html  session-viewer.css
apps/desktop/src/pages/: DashboardPage.tsx  LandingPage.tsx
apps/desktop/src/styles/: globals.css
apps/vscode-ext/: .vscodeignore  README.md  package.json  tsconfig.json  tsup.config.ts
apps/vscode-ext/src/: daemon-client.ts  extension.ts
apps/vscode-ext/src/commands/: index.ts
apps/vscode-ext/src/panels/: WebviewPanelHost.ts
apps/vscode-ext/src/utils/: getNonce.ts  getUri.ts
apps/vscode-ext/webview-ui/: index.html  package.json  vite.config.ts
apps/vscode-ext/webview-ui/src/: index.css
apps/vscode-ext/webview-ui/src/pages/: DashboardPage.tsx
crates/snps-cli/: Cargo.toml
crates/snps-cli/src/: main.rs
crates/snps-core/src/: llm.rs
crates/snps-core/src/graph/: mod.rs
crates/snps-core/src/idlc/: mod.rs
crates/snps-wasm/: Cargo.toml
crates/snps-wasm/src/: lib.rs
docs/: 12_FACTOR_AGENTS_DESIGN.md  2025-12-12-claude-session-parser.md  AI_ENABLED_PROJECT_MANAGEMENT_RESEARCH.md  AI_TEAM_COORDINATION_PATTERNS.md  BAML_BEST_PRACTICES_ANALYSIS.md  CLAUDE_SESSION_PARSER.md  HUMANLAYER_THOUGHTS_ANALYSIS.md  IDLC_CONFIGURATION.md  PLANNED_FEATURES.md  PMSYNAPSE_CORE_FEATURES.md  PROJECT_WORKFLOW.md  RELEASE_PROCESS.md  RUST_GRAPH_VECTOR_DATABASE_OPTIONS.md  STARTUP_GUIDE.md  TASK_MASTER_ANALYSIS.md  THOUGHTS_REFERENCE.md  THOUGHTS_SYSTEM.md  THOUGHTS_TEAM_TUTORIAL.md  THOUGHTS_WORKFLOW_TUTORIAL.md  TURBOREPO_RELEASE_PROCESS.md  The Official BMad-Method Masterclass (The Complete IDE Workflow).txt  UI_ARCHITECTURE_PATTERNS.md  VSCODE_EXTENSION_ARCHITECTURE.md  VSCODE_EXTENSION_DEVELOPMENT.md  brainstorming-session-results.md  brief.md  claude_session_detailed_flow.json  claude_session_flow_analysis.json  how humanlayer works.md  prd.md
docs/-Users-igor-Dev-Helixoid-pmsynapse/: 0c721d51-3a4f-4db0-b5c9-e364c9c55de4.jsonl  117458c8-1af5-426d-8b44-76913356fa48.jsonl  2e90adc4-4a84-4086-858d-f7af134de790.jsonl  427bca66-48b7-4c71-8833-0078e1a8643b.jsonl  4b3e7222-b95d-4a7c-b60a-9317d0626e04.jsonl  66cadabe-aae1-4c73-852f-dbc519f52dc4.jsonl  6df416b8-9af7-4dc2-9c55-3179c4afb8a8.jsonl  8062250a-fd4d-442d-9eba-bdb36204487f.jsonl  8e170928-cdde-436f-a2a6-5b99b81a8ed5.jsonl  agent-7aadbf82.jsonl  agent-a097cbd.jsonl  agent-a0af39b.jsonl  agent-a159b53.jsonl  agent-a1cf80f.jsonl  agent-a27d660.jsonl  agent-a2828ca.jsonl  agent-a38e094.jsonl  agent-a45da65.jsonl  agent-a4645a7.jsonl  agent-a4d41cd.jsonl  agent-a5220c9.jsonl  agent-a56f236.jsonl  agent-a5b0da3.jsonl  agent-a6145ad.jsonl  agent-a621ca1.jsonl  agent-a732fbb.jsonl  agent-a78863c.jsonl  agent-a7fd90a.jsonl  agent-a82e180.jsonl  agent-a852bac.jsonl  agent-a85d13b.jsonl  agent-a944119.jsonl  agent-a9a4138.jsonl  agent-a9c6145.jsonl  agent-aa4ff4d.jsonl  agent-aacd3f1.jsonl  agent-ab0373a.jsonl  agent-aba9944.jsonl  agent-abccae2.jsonl  agent-abe0dab.jsonl  (+13 more)
docs/prd/: 1-intro-project-analysis-and-context.md  2-requirements.md  3-user-interface-enhancement-goals.md  4-technical-constraints-and-integration-requirements.md  5-epic-and-story-structure.md  6-epic-details-with-stories.md  index.md
docs/user-guide/: KNOWLEDGE_SYSTEM_TUTORIAL.md
engine/: CLAUDE.md  Cargo.toml
engine/snps-cli/: Cargo.toml
engine/snps-cli/features/: cli_basic.feature  idlc_commands.feature  matter_commands.feature  repo_commands.feature
engine/snps-cli/src/: daemon.rs  main.rs  update_checker.rs
engine/snps-cli/src/daemon/: events.rs  handlers.rs  server.rs  state.rs
engine/snps-cli/tests/: cli_tests.rs  cucumber.rs
engine/snps-core/: Cargo.toml
engine/snps-core/features/: config.feature  indexing.feature  matter_parsing.feature  matter_paths.feature  repository.feature
engine/snps-core/src/: claude.rs  config.rs  graph.rs  idlc.rs  index.rs  knowledge.rs  lib.rs  matter.rs  repository.rs
engine/snps-core/src/claude/: analyzer.rs  export.rs  html_template.js  models.rs  parser.rs
engine/snps-core/src/idlc/: templates.rs
engine/snps-core/src/idlc/templates/: default.yaml
engine/snps-core/src/matter/: parser.rs
engine/snps-core/tests/: cozo_test.rs  cucumber.rs  graph_tests.rs  idlc_tests.rs
hack/: cleanup_worktree.sh  create_worktree.sh  spec_metadata.sh
hack/linear/: README.md  linear-cli.ts
integ-tests/: README.md
public-repo-files/: README.md  SETUP_PUBLIC_REPO.md
scripts/: pre-push  prepare-release.sh
thoughts/shared/completed/: 2025-12-17-cucumber-bdd-migration.md
thoughts/shared/plans/: 2025-12-17-implement-bdd-testing-matter.md
thoughts/shared/research/: 2025-12-17-bdd-testing-matter-implementation.md
