[workspace]
resolver = "2"
members = [
  "crates/snps-core",
  "crates/snps-cli",
  "apps/desktop/src-tauri",
]

default-members = [
  "crates/snps-core",
  "crates/snps-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HelixoidLLC/pmsynapse"
authors = ["Helixoid LLC"]
description = "AI-enabled end-to-end project management system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Storage - using rusqlite for MVP, CozoDB later when dependency issues resolved
rusqlite = { version = "0.37", features = ["bundled"] }
# Graph & Vector Database (CozoDB) - temporarily disabled due to dependency conflicts
# cozo = { version = "0.7", default-features = true }

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri
tauri = "2"
tauri-build = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"

# Testing
insta = { version = "1", features = ["yaml"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[profile.dev]
opt-level = 0
debug = true
