# PMSynapse Engine Workspace
#
# This workspace contains all Rust crates for the PMSynapse engine.
# Following BAML's pattern of isolating Rust code in a dedicated directory.

[workspace]
resolver = "2"
members = [
    "snps-core",
    "snps-cli",
    # Future crates:
    # "snps-daemon",
    # "snps-graph",
    # "snps-llm",
    # "snps-idlc",
]

default-members = [
    "snps-core",
    "snps-cli",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HelixoidLLC/pmsynapse"
authors = ["Helixoid LLC"]
description = "AI-enabled end-to-end project management system"

[workspace.dependencies]
# Internal crates
snps-core = { path = "snps-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Storage - CozoDB for graph and vector database
# Full features would be: ["minimal", "requests", "rayon", "graph-algo"]
# Currently blocked: graph-algo due to graph_builder bug (see COZODB_INTEGRATION.md)
cozo = { version = "0.7", default-features = false, features = ["minimal", "requests", "rayon"] }

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
directories = "5"
dirs = "5"
chrono = "0.4"
hostname = "0.4"
whoami = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system utilities
walkdir = "2"

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[profile.dev]
opt-level = 0
debug = true
