[package]
name = "snps-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PMSynapse WASM bindings for browser deployment"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
# Note: snps-core with cozo doesn't compile to WASM yet
# WASM will use standalone implementations for browser

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "console",
  "Window",
  "Document",
] }

# Console logging for WASM
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
