[package]
name = "snps-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PMSynapse CLI - command line interface for project management"

[[bin]]
name = "snps"
path = "src/main.rs"

[dependencies]
# Core library
snps-core = { path = "../snps-core" }

# Workspace dependencies
tokio = { workspace = true, features = ["full", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json", "blocking"] }

# SSE streaming
async-stream = "0.3"
futures = "0.3"

# CLI-specific
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
directories = "5"
dirs = "5"
chrono = { workspace = true }
hostname = "0.4"
shellexpand = "3.1"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
