[package]
name = "pmsynapse-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PMSynapse Desktop Application"

[lib]
name = "pmsynapse_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Core library
snps-core = { path = "../../../engine/snps-core" }

# Tauri
tauri = { workspace = true, features = [] }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-store = { workspace = true }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
